# whose-shell

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  WhoseShell_Development_Plan.md  WhoseShell_v0.2.0_Plan.md  WhoseShell_v0.3.0_Plan.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
app/: __init__.py  bootstrap.py  main.py
app/backends/: __init__.py  local_backend_factory.py  local_posix_backend.py  local_windows_backend.py  qprocess_backend.py  sftp_backend.py  ssh_backend.py  terminal_base.py
app/common/: errors.py  models.py  platform.py  signals.py
app/core/: __init__.py  app_context.py  command_capture.py  event_bus.py  file_manager.py  monitor_manager.py  session_manager.py  terminal_manager.py
app/storage/: __init__.py  db.py  migrations.py  repositories.py  secrets.py
app/ui/: __init__.py  main_window.py
app/ui/files/: __init__.py  file_manager_dock.py
app/ui/history/: __init__.py  history_dock.py
app/ui/layout/: __init__.py
app/ui/monitor/: __init__.py  monitor_dock.py
app/ui/sessions/: __init__.py  sessions_dock.py  ssh_connection_dialog.py
app/ui/settings/: __init__.py  settings_panel.py
packaging/: pyinstaller_build.py
tests/: test_ansi_parser.py  test_command_history_runtime.py  test_file_manager_phase1.py  test_file_manager_phase2.py  test_file_manager_phase3.py  test_file_manager_phase4.py  test_history_dock.py  test_local_backend_factory.py  test_local_posix_backend.py  test_pyinstaller_build.py  test_secret_store.py  test_settings_runtime.py  test_ssh_phase4.py  test_storage_repositories.py
(+7 files in other folders)
