[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whose-shell"
version = "0.1.0"
description = "Cross-platform desktop shell tool built with PySide6."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Whose Shell contributors" }]
dependencies = [
    "PySide6>=6.7",
    "asyncssh>=2.14",
    "psutil>=5.9",
    "keyring>=25.0",
]

[project.optional-dependencies]
terminal-windows = ["pywinpty>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
whose-shell = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
